--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,18 @@
-h1 {
-  color: red;
+#area {
+  width: 256px;
+  height: auto;
 }
-body {
+.box {
+  width: 64px;
+  height: 64px;
+  background-color: red;
+  float: left;
+}
+.selected {
   background-color: blue;
 }
-
-p {
-  color: #f5f5f5;
-  font-size: 32pt;
+#reset {
+  width: 48px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
 }
