--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,15 @@
 .selected {
   background-color: blue;
 }
-#reset {
+button {
   width: 48px;
+  margin-bottom: 10px;
   background-color: #f5f5f5;
-  border-radius: 10px;
+  border: 1px solid #f5f5f5;
+  border-radius: 2px;
+  box-shadow: 0 1px #e4e4e4;
+}
+button:hover {
+  border: 1px solid #d3d3d3;
+  margin-bottom: 10px;
 }
