--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 #area {
-  width: 256px;
-  height: auto;
+  width: 512px;
+  height: 512px;
 }
 .box {
-  width: 64px;
-  height: 64px;
+  width: 2rem;
+  height: 2rem;
   background-color: red;
   float: left;
 }
