--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@
   width: 512px;
   height: 512px;
 }
+
 .box {
-  width: 2rem;
-  height: 2rem;
+  min-width: 1px;
+  min-height: 1px;
+  width: 2em;
+  height: 2em;
   background-color: red;
   float: left;
 }
