--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
 #area {
   width: 512px;
   height: 512px;
+  float: center;
+  margin: auto;
+  /* TODO: make grid togglable */
+  box-shadow: -1px -1px #333, 1px 1px #333;
+
 }
 
 .box {
   min-width: 1px;
   min-height: 1px;
-  background-color: red;
+  background-color: #f8f8f8;
   float: left;
+  /* TODO: make grid togglable */
+  box-shadow: inset -1px -1px #333, inset 1px 1px #333;
 }
 .selected {
-  background-color: blue;
+  background-color: #a1a1a1;
+}
+.btn-controls {
+  float: center;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 button {
-  width: 48px;
+  width: auto;
   margin-bottom: 10px;
   background-color: #f5f5f5;
   border: 1px solid #f5f5f5;
